# 1brc

./: .gitignore  Cargo.toml  README.md  output.txt  run.sh
src/: main.rs  mapped_file.rs  values.rs
