[package]
name = "brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", optional = true }
lexical-parse-float = { version = "0.8.5", optional = true }
fast-float = { version = "0.2.0", optional = true }

[features]
default = []
cleanup_on_drop = []

[profile.release]
lto = "fat"
codegen-units = 1
